# montenegrina

./: .dockerignore  .env.azure.example  .env.deploy.example  .env.development.example  .env.example  .gitignore  .prettierignore  README.md  azure.yaml  compose.yaml  deploy  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  run_local  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml
apps/api/: Dockerfile  package.json  tsconfig.json
apps/knowledge-parser/: Dockerfile  pyproject.toml
apps/knowledge-parser/src/montenegrina_knowledge_parser/: main.py  parser.py  rerank.py  sanitization.py
apps/knowledge-parser/test/: test_parser.py
apps/ops/: Dockerfile
apps/voice-agent/: Dockerfile  pyproject.toml
apps/voice-agent/src/montenegrina_voice_agent/: __init__.py  agent.py  inbound.py  language.py  main.py  models.py  runtime_api.py  settings.py  telemetry.py  voice_prompt.py
apps/voice-agent/tests/: test_mne_mcp.py  test_models.py
apps/web/: Dockerfile  instrumentation-client.ts  next.config.ts  package.json  playwright.config.ts  tsconfig.json
apps/worker/: Dockerfile  package.json  tsconfig.json
docs/adr/: 0001-monorepo-and-runtime-boundaries.md  0002-contract-first-interfaces.md  0003-tenant-isolation.md  0004-provider-routing.md  0005-livekit-deployment.md  0006-authentication-and-secrets.md  0007-knowledge-retrieval.md  0008-aws-containers-without-kubernetes.md
docs/deployment/: azure-production.md
docs/knowledge/: architecture.md
docs/product/: cursor-production-sprint-prompt.md  implementation-report.md  saas-platform.md
evals/: package.json  tsconfig.json
scripts/: azure-bind-domains.sh  azure-deploy.sh  azure-lib.sh  azure-prepare-env.sh  azure-rollback.sh  azure-smoke.sh  azure-up.sh  azure-validate-env.sh  livekit-sip-bootstrap.sh
(+180 files in other folders)
