[project]
name = "montenegrina-knowledge-parser"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "httpx>=0.28.0",
  "python-multipart>=0.0.20",
  "sentence-transformers>=3.3.0",
  "torch>=2.5.0",
  "pypdf>=5.1.0",
  "python-docx>=1.1.2",
  "openpyxl>=3.1.5",
  "python-pptx>=1.0.2",
  "beautifulsoup4>=4.12.3",
  "markdown>=3.7",
]

[project.scripts]
montenegrina-knowledge-parser = "montenegrina_knowledge_parser.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/montenegrina_knowledge_parser"]
