[project]
name = "montenegrina-voice-agent"
version = "0.1.0"
description = "Production LiveKit voice runtime for Montenegrina"
requires-python = ">=3.13,<3.14"
dependencies = [
  "httpx>=0.28.1,<0.29",
  "livekit-agents[deepgram,elevenlabs,openai,silero]>=1.5,<1.6",
  "pydantic>=2.12,<3",
  "pydantic-settings>=2.11,<3",
]

[dependency-groups]
dev = [
  "mypy>=1.18,<2",
  "pytest>=8.4,<9",
  "pytest-asyncio>=1.2,<2",
  "ruff>=0.14,<0.15",
]

[project.scripts]
montenegrina-voice-agent = "montenegrina_voice_agent.main:main"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/montenegrina_voice_agent"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "RUF"]

[tool.mypy]
python_version = "3.13"
strict = true
packages = ["montenegrina_voice_agent"]
mypy_path = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
